--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "react-scripts build",
-    "deploy": "gh-pages -b master -d build",
+   "build":"react-scripts  build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
